# Spiced

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  chaiscript_bindings.cpp  chaiscript_creator.hpp  game.cpp  game.hpp  game_event.cpp  game_event.hpp  main.chai  main.cpp  map.cpp  map.hpp
CMake/: FindSFML.cmake
resources/Maps/: camp.json  camp.tmx  fairview.json  fairview.tmx  glennhaven.json  glennhaven.tmx  mineralville.json  mineralville.tmx  test.json  worldmap.json  worldmap.tmx
resources/TileSets/: tileset_1.tsx
sample_game/: main.chai  spiced.chai
sample_game/resources/Maps/: camp.json  camp.tmx  fairview.json  fairview.tmx  mineralville.tmx  worldmap.json
src/: chaiscript_bindings.cpp  chaiscript_bindings.hpp  chaiscript_creator.cpp  chaiscript_creator.hpp  chaiscript_stdlib.cpp  chaiscript_stdlib.hpp  game.cpp  game.hpp  game_event.cpp  game_event.hpp  main.cpp  map.cpp  map.hpp
